--- a/new.html
+++ b/new.html
@@ -4,9 +4,8 @@
     <title>Hola!</title>
   </head>
   <body>
-    <h1>ADIOS!</h1>
-    <h2>HOLA,Adios!</h2>
-    Hola, world!
+    <h1> style="color;blue;">Welcome to my website!!</h1>
+    <h2>Hola, world!</h2>
   </body>
 
 </html>
