--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <title>Hola!</title>
   </head>
   <body>
-    <h1> style="color;blue;">Welcome to my website!!</h1>
+    <h1> style="color:blue;">Welcome to my website!!</h1>
     <h2>Hola, world!</h2>
   </body>
 
