--- a/new.html
+++ b/new.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <title>Hola!</title>
+  <style>
+    h1 {
+      color: blue:
+    }
+  </style>
   </head>
-  <body>
-    <h1>Welcome to my website!!</h1>
-    <h2>Hola, world!</h2>
   </body>
 
 </html>
