--- a/new.html
+++ b/new.html
@@ -3,9 +3,7 @@
   <head>
     <title>Hola!</title>
   <style>
-    h1 {
-      color: blue:
-    }
+    <h1>Hola, World!</h1>
   </style>
   </head>
   </body>
